--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,1 +1,11 @@
-<h1>HEADER</h1>
+<div class="dropdown" style="float: right;">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        Huỳnh Huy   
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="course/create">Đăng ký khóa học</a>
+        <a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a>
+        <a class="dropdown-item" href="#">Đăng xuất</a>
+    </div>
+</div>
